added weekly entry

--- a/blog.html
+++ b/blog.html
@@ -275,9 +275,10 @@
           nothing of actual value was stored but I enjoyed it, it was challenging and fun! <br> 
           <em>(Fullstack Academy Week 18 of 27)</em> </li>
 
-        <!-- <li> <u>Week 45: Monday, April 11 - Sunday, April 17</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 19 of 27)</em> </li> -->
+        <li> <u>Week 45: Monday, April 11 - Sunday, April 17</u> <br> 
+          This week was all about Test-Driven Development and the importance of testing, but we  also discussed when testing may not be necessary. We started off by covering how to write tests 
+          and how they work. Then we were assigned a list of tests to try to solve ourselves using PostgreSQL and JavaScript. <br> 
+          <em>(Fullstack Academy Week 19 of 27)</em> </li>
 
         <!-- <li> <u>Week 46: Monday, April 18 - Sunday, April 24</u> <br> 
           ENTRY <br> 
