added weekly entry

--- a/blog.html
+++ b/blog.html
@@ -280,9 +280,10 @@
           and how they work. Then we were assigned a list of tests to try to solve ourselves using PostgreSQL and JavaScript. <br> 
           <em>(Fullstack Academy Week 19 of 27)</em> </li>
 
-        <!-- <li> <u>Week 46: Monday, April 18 - Sunday, April 24</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 20 of 27)</em> </li> -->
+        <li> <u>Week 46: Monday, April 18 - Sunday, April 24</u> <br> 
+          Time to practice what we’ve learned and start building some web apps! We were broken into groups and given guiding instructions to build a fitness tracking web app. We were given two 
+          weeks to complete the backend, then one to complete the front end. By the end of week one, we were almost done with the backend! <br> 
+          <em>(Fullstack Academy Week 20 of 27)</em> </li>
 
         <!-- <li> <u>Week 47: Monday, April 25 - Sunday, May 1</u> <br> 
           ENTRY <br> 
