--- a/resume.html
+++ b/resume.html
@@ -29,18 +29,19 @@
       <h1><u>About</u></h1>
       <ul>
         <li>
-          I am an aspiring Full-Stack Developer, learning how to code from
-          Fullstack Academy, Codecademy, and YouTube tutorials.
+          I am a Jr. Front End Web Developer, having completed a boot camp with
+          Fullstack Academy in June 2022, hosted by the University of Texas at
+          Dallas.
         </li>
         <li>
           I am currently a Workplace Coordinator for Autodesk, Inc in Plano, TX.
-          I have a diverse and well rounded employment history with experience
-          in construction (sheet metal), payroll, facilities and general office
+          I have a diverse and well-rounded employment history with experience
+          in construction (sheet metal), payroll, facilities, and general office
           support.
         </li>
         <li>
           I am a dual citizen of Canada and the US, originally from Calgary,
-          Alberta and naturalized in Irving, Texas in the summer of 2011.
+          Alberta, and naturalized in Irving, Texas in the summer of 2011.
         </li>
       </ul>
     </div>
@@ -51,6 +52,10 @@
         <h3>Autodesk, Plano TX</h3>
         <h4>May 2016 - Present</h4>
         <ul>
+          <li>
+            Originally hired as a contractor through TalentWave, converted to
+            FTE in July, 2018
+          </li>
           <li>
             Created proposals for office renovations and equipment updates with
             estimated costs from local vendors and contractors.
@@ -145,10 +150,13 @@
     <div class="EducationSection">
       <h1><u>Education</u></h1>
       <ul>
+        <li><h2>Fullstack Academy</h2></li>
+        <ul>
+          <li><h3>Certificate of Completion</h3></li>
+        </ul>
         <li><h2>Eastfield College</h2></li>
         <ul>
           <li><h3>Associate of Arts and Sciences (AAS), Biology</h3></li>
-          <li><h4>2007 - 2011</h4></li>
         </ul>
       </ul>
     </div>
