added weekly entry

--- a/blog.html
+++ b/blog.html
@@ -285,9 +285,10 @@
           weeks to complete the backend, then one to complete the front end. By the end of week one, we were almost done with the backend! <br> 
           <em>(Fullstack Academy Week 20 of 27)</em> </li>
 
-        <!-- <li> <u>Week 47: Monday, April 25 - Sunday, May 1</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 21 of 27)</em> </li> -->
+        <li> <u>Week 47: Monday, April 25 - Sunday, May 1</u> <br> 
+          After struggling with various issues and bugs the backend was completed just in time for the turn in. Now the clock starts on the frontend functionality, pulling it all together. We 
+          have until next week to get it done! <br> 
+          <em>(Fullstack Academy Week 21 of 27)</em> </li>
 
         <!-- <li> <u>Week 48: Monday, May 2 - Sunday, May 8</u> <br> 
           ENTRY <br> 
