--- a/blog.html
+++ b/blog.html
@@ -290,9 +290,10 @@
           have until next week to get it done! <br> 
           <em>(Fullstack Academy Week 21 of 27)</em> </li>
 
-        <!-- <li> <u>Week 48: Monday, May 2 - Sunday, May 8</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 22 of 27)</em> </li> -->
+        <li> <u>Week 48: Monday, May 2 - Sunday, May 8</u> <br> 
+          Another challenging but satisfying week, once again it came down to the wire. I was having issues getting my API calls to route correctly, an office hour later and the team and I got 
+          it figured out and submitted! It doesn’t look the best but it works as expected, and we take those. <br> 
+          <em>(Fullstack Academy Week 22 of 27)</em> </li>
         
         <!-- <li> <u>Week 49: Monday, May 9 - Sunday, May 15</u> <br> 
           ENTRY <br> 
