added weekly entry

--- a/blog.html
+++ b/blog.html
@@ -295,9 +295,10 @@
           it figured out and submitted! It doesn’t look the best but it works as expected, and we take those. <br> 
           <em>(Fullstack Academy Week 22 of 27)</em> </li>
         
-        <!-- <li> <u>Week 49: Monday, May 9 - Sunday, May 15</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 23 of 27)</em> </li> -->
+        <li> <u>Week 49: Monday, May 9 - Sunday, May 15</u> <br> 
+          After last week this week was very easy. This week was mostly about preparing to work on the next, and final, assignment. Our Amazon-clone and capstone project for the bootcamp. By the 
+          end of the week my group had the backend mostly setup except for a few tables that’ll we plan on creating as we need them. <br> 
+          <em>(Fullstack Academy Week 23 of 27)</em> </li>
 
         <!-- <li> <u>Week 50: Monday, May 16 - Sunday, May 22</u> <br> 
           ENTRY <br> 
