added weekly entry

--- a/blog.html
+++ b/blog.html
@@ -300,9 +300,10 @@
           end of the week my group had the backend mostly setup except for a few tables that’ll we plan on creating as we need them. <br> 
           <em>(Fullstack Academy Week 23 of 27)</em> </li>
 
-        <!-- <li> <u>Week 50: Monday, May 16 - Sunday, May 22</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 24 of 27)</em> </li> -->
+        <li> <u>Week 50: Monday, May 16 - Sunday, May 22</u> <br> 
+          The rubber started meeting the road this week but we also spun out a bit. Some of the backend code that we thought was good to go wasn’t. We worked together, as a team, figured out our 
+          issues, and pushed forward. We didn’t make as much progress as we had hoped but we made meaningful progress nonetheless! <br> 
+          <em>(Fullstack Academy Week 24 of 27)</em> </li>
 
         <!-- <li> <u>Week 51: Monday, May 23 - Sunday, May 29</u> <br> 
           ENTRY <br> 
