--- a/blog.html
+++ b/blog.html
@@ -26,13 +26,11 @@
       <p>I officially started my coding journey on <b>June 5th, 2021.</b> I had started, and stopped, twice before but this time I was committed! I was ready to change my career and 
         learn a new skill. I started out using Codecademy and YouTube, about 16 weeks in I decided to sign up for a coding boot camp, Fullstack Academy, hosted through the University of Texas 
         at Dallas.</p>
-
       <p>To help me stay focused and accountable, before the boot camp, I set a goal and kept a daily journal of my progress. My goal was to complete the Full Stack Developer course on 
         Codecademy. Starting with the Front End Developer section, pausing my progress to build out my portfolio, then resuming the Back End section while searching for a Front End Developer 
         position. I didn’t ultimately stick to this original plan, as halfway through it I decided to sign up for a boot camp.</p>
-
       <p>I started my journey with a strict timeline to follow but adjusted and shifted the goalposts as I figured out what worked and what didn’t. Through it all, I never lost sight of the 
-        ultimate goal: Developing and honing the necessary skills for a career change. </p>
+        ultimate goal: Developing and honing the necessary skills for a career change. Below is my weekly journal through my first year!</p>
   </div>
 
   <!-- Coding Journal -->
