added weekly entry

--- a/blog.html
+++ b/blog.html
@@ -310,9 +310,10 @@
           and productive week! <br> 
           <em>(Fullstack Academy Week 25 of 27)</em> </li>
 
-        <!-- <li> <u>Week 52: Monday, May 30 - Sunday, June 5</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 26 of 27)</em> </li> -->
+        <li> <u>Week 52: Monday, May 30 - Sunday, June 5</u> <br> 
+          Once again it was a week of progress, maybe a bit slower than we would have liked as a group, but progress all the same. We’re very close to finishing up, I’ve already started applying to 
+          jobs! This week marks my official one-year anniversary from when I started on this path! <br> 
+          <em>(Fullstack Academy Week 26 of 27)</em> </li>
 
         <!-- <li> <u>Week 53: Monday, June 6 - Sunday, June 12</u> <br> 
           ENTRY <br> 
