--- a/resume.html
+++ b/resume.html
@@ -29,19 +29,24 @@
       <h1><u>About</u></h1>
       <ul>
         <li>
-          I am a Jr. Front End Web Developer, having completed a boot camp with
-          Fullstack Academy in June 2022, hosted by the University of Texas at
-          Dallas.
+          I am a Jr. Software Engineer, having completed a boot camp with Fullstack Academy in June 2022, hosted by the University of Texas at Dallas. Welcome to my portfolio!
         </li>
         <li>
-          I am currently a Workplace Coordinator for Autodesk, Inc in Plano, TX.
-          I have a diverse and well-rounded employment history with experience
-          in construction (sheet metal), payroll, facilities, and general office
-          support.
+          Currently, I'm a Workplace Coordinator for Autodesk, Inc in Plano, TX. I have a diverse and well-rounded employment history with experience in construction (sheet metal), payroll, facilities, and general office support. I am excited to start my next chapter in software development!
         </li>
         <li>
-          I am a dual citizen of Canada and the US, originally from Calgary,
-          Alberta, and naturalized in Irving, Texas in the summer of 2011.
+          Originally from Calgary, Alberta, I'm a dual citizen of Canada and the US. I was naturalized in Irving, Texas in the summer of 2011.
+        </li>
+      </ul>
+    </div>
+    <div class="ExperienceSection">
+      <h1><u>Technical Skills</u></h1>
+      <ul>
+        <li>
+          <strong>Proficient:</strong> JavaScript, React / Redux, Node, Express, HTML5, CSS, Git
+        </li>
+        <li>
+          <strong>Knowledgeable:</strong> PostgreSQL, Heroku
         </li>
       </ul>
     </div>
@@ -53,96 +58,19 @@
         <h4>May 2016 - Present</h4>
         <ul>
           <li>
-            Originally hired as a contractor through TalentWave, converted to
-            FTE in July, 2018
+            Started as a contractor, converted to a full time employee in July 2018
           </li>
           <li>
-            Created proposals for office renovations and equipment updates with
-            estimated costs from local vendors and contractors.
+            Completed multiple office revisions and overhauls
           </li>
           <li>
-            Received and fulfilled facilities requests including requests for
-            new furniture, conferencing equipment, kitchen equipment, general
-            supplies and repairs.
+            Cut costs by reviewing contracts annually and selecting cost efficient vendors
           </li>
           <li>
-            Received and processed mail and parcels including managing outgoing
-            mail and shipping equipment both domestically and internationally.
+            Received and fulfilled facilities requests including requests for new furniture, conferencing equipment, kitchen equipment, general supplies and repairs
           </li>
           <li>
-            Worked with building management to ensure changes were landlord
-            approved and that contractors had required paperwork and security
-            clearances.
-          </li>
-          <li>
-            Assisted with event planning and managed the local conference room
-            calendars. I was also responsible for tracking site and reception
-            event metrics.
-          </li>
-          <li>
-            Collaborated with our IT department to update and refresh server
-            room equipment, including UPS and network switch upgrades.
-          </li>
-          <li>
-            Worked side by side with our security teams to create evacuation
-            plans, troubleshoot security camera issues, and create a safe work
-            environment.
-          </li>
-          <li>
-            Due to the size of the site I was also the primary site contact,
-            after hours point of contact, receptionist and IT contact.
-          </li>
-        </ul>
-        <li><h2>Data Entry Coordinator</h2></li>
-        <h3>Employbridge, Irving TX</h3>
-        <h4>July 2015 - April 2016</h4>
-        <ul>
-          <li>
-            Quickly and accurately entered payroll data from submitted time
-            cards and spreadsheets.
-          </li>
-          <li>
-            Coordinated with other payroll and billing staff to ensure proper
-            processing.
-          </li>
-          <li>
-            Trained new employees and helped develop improvements to the
-            process.
-          </li>
-        </ul>
-        <li><h2>Sheetmetal Technician Assistant</h2></li>
-        <h3>Trotter & Morton, Calgary AB</h3>
-        <h4>October 2013 - April 2015</h4>
-        <ul>
-          <li>
-            Organized construction material and equipment, general housekeeping,
-            assisted journeymen as needed and kept up with safety paper work.
-          </li>
-          <li>
-            Fabricated, installed and sealed duct systems for commercial and
-            industrial buildings.
-          </li>
-          <li>
-            Operated scissor lifts, boom lifts, and power tools while closing
-            following strict safety policies.
-          </li>
-        </ul>
-        <li><h2>Intern</h2></li>
-        <h3>Milliman, Dallas TX</h3>
-        <h4>June 2008 - August 2011</h4>
-        <ul>
-          <li>
-            General clerical office support duties. Entered mass amounts of
-            data, created letters to pension participants and mailed them.
-            Created copies and sent faxes.
-          </li>
-          <li>
-            Call center duties including taking and making calls and recording
-            sensitive data.
-          </li>
-          <li>
-            Reconciled data files to payments posted by the system for numerous
-            clients and corrected discrepancies.
+            Collaborated with our IT department to update and refresh server room equipment, including UPS and network switch upgrades
           </li>
         </ul>
       </ul>
@@ -152,11 +80,13 @@
       <ul>
         <li><h2>Fullstack Academy</h2></li>
         <ul>
-          <li><h3>Certificate of Completion</h3></li>
+          <li><h3>Software Engineering Certificate</h3></li>
+          <li><h4>June 2022</h4></li>
         </ul>
         <li><h2>Eastfield College</h2></li>
         <ul>
           <li><h3>Associate of Arts and Sciences (AAS), Biology</h3></li>
+          <li><h4>August 2011</h4></li>
         </ul>
       </ul>
     </div>
@@ -165,10 +95,13 @@
       <ul>
         <li><h2>Legacy Counseling Center, Inc.</h2></li>
         <ul>
-          <li><h3>Admin Support, General Labor</h3></li>
+          <li><h3>Administrative Assistant/General Labor</h3></li>
           <li><h4>July 2003 - Present</h4></li>
           <li>
-            Event management support, general labor, and general office support.
+            Assisted with event setup, operations, and clean-up
+          </li>
+          <li>
+            Office support including filing, organizing, data entry, and client contact
           </li>
         </ul>
       </ul>
