--- a/Projects.html
+++ b/Projects.html
@@ -11,7 +11,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src="blackjackgame.js" defer></script>
   </head>
 
   <!-- Navigation Bar -->
@@ -26,87 +25,53 @@
   <!-- Projects Page Body -->
   <body>
     <div class="Projects">
-      <h2>Projects Deployed on Netlify</h2>
-      <ul class="ProjectList">
+      <h2>Projects Deployed on Netlify or Heroku</h2>
+      <div class="ProjectList">
+        <li>
+          <a href="https://exotic-animal-shop.herokuapp.com/" target="_blank"
+          >Exotic Animals 'R Us (eCommerce Website)</a
+          >
+        </li>
+        <li>
+          <a href="https://sharp-poitras-b94dad.netlify.app/posts" target="_blank"
+          >Stranger's Things (Craig's List Clone)</a
+          >
+        </li>
+        <li>
+          <a href="https://mystifying-euclid-1fb75d.netlify.app/" target="_blank"
+          >Art Collector (Harvard Art API)</a
+          >
+        </li>
+        <li>
+          <a href="https://rocky-oasis-30036.herokuapp.com/" target="_blank"
+          >Wizard News (Hacker News Clone)</a
+          >
+        </li>
         <li>
           <a href="https://colin-hoolwerf-snake.netlify.app/" target="_blank"
-            >Classic Snake in Vanilla JavaScript</a
+          >Classic Snake in Vanilla JavaScript</a
           >
         </li>
-
         <li>
           <a
-            href="https://colin-hoolwerf-guessing-game.netlify.app/"
-            target="_blank"
-            >Guessing Game in Vanilla JavaScript</a
+          href="https://colin-hoolwerf-guessing-game.netlify.app/"
+          target="_blank"
+          >Guessing Game in Vanilla JavaScript</a
           >
         </li>
-
         <li>
           <a
-            href="https://colin-hoolwerf-blackjack.netlify.app/"
-            target="_blank"
-            >Blackjack Game in Vanilla JavaScript</a
+          href="https://colin-hoolwerf-blackjack.netlify.app/"
+          target="_blank"
+          >Blackjack Game in Vanilla JavaScript</a
           >
         </li>
-      </ul>
+      </div>
+      <hr />
+      <h2><a href="https://github.com/ColinH58" target="_blank">My GitHub Profile</a></h2>
     </div>
-
-    <div class="Projects">
-      <h2>Projects on Github</h2>
-      <ul class="ProjectList">
-        <li>
-          <a href="https://github.com/ColinH58/todolist-react" target="_blank"
-            >To Do List App in React (Code Along)</a
-          >
-        </li>
-
-        <li>
-          <a href="https://github.com/ColinH58/tictactoe-react" target="_blank"
-            >Tic Tac Toe in React (Code Along w/ Modifications)</a
-          >
-        </li>
-
-        <!-- <li>
-          <a href="AppLinkHere" target="_blank">APP NAME</a>
-        </li> -->
-
-        <!-- <li>
-          <a href="AppLinkHere" target="_blank">APP NAME</a>
-        </li> -->
-
-        <!-- <li>
-          <a href="AppLinkHere" target="_blank">APP NAME</a>
-        </li> -->
-
-        <!-- <li>
-          <a href="AppLinkHere" target="_blank">APP NAME</a>
-        </li> -->
-
-        <!-- <li>
-          <a href="AppLinkHere" target="_blank">APP NAME</a>
-        </li> -->
-
-        <!-- <li>
-          <a href="AppLinkHere" target="_blank">APP NAME</a>
-        </li> -->
-
-        <!-- <li>
-          <a href="AppLinkHere" target="_blank">APP NAME</a>
-        </li> -->
-
-        <!-- <li>
-          <a href="AppLinkHere" target="_blank">APP NAME</a>
-        </li> -->
-      </ul>
-    </div>
-
-    <div class="Projects">
-      <h1>More Coming Soon!</h1>
-    </div>
-  </body>
-
-  <!-- Footer -->
+    
+    <!-- Footer -->
   <footer>
     <a
       href="mailto:colinhoolwerf@gmail.com"
@@ -125,12 +90,6 @@
       target="_blank"
       class="fa fa-github"
       title="GitHub"
-    ></a>
-    <a
-      href="https://www.instagram.com/colinh58/"
-      target="_blank"
-      class="fa fa-instagram"
-      title="Instagram"
     ></a>
     <a
       href="https://twitter.com/ColinSH58"
