--- a/Projects.html
+++ b/Projects.html
@@ -32,7 +32,7 @@
           >
         </li>
         <li>
-          <a href="https://sharp-poitras-b94dad.netlify.app/posts" target="_blank"
+          <a href="https://sharp-poitras-b94dad.netlify.app/" target="_blank"
           >Stranger's Things (Craig's List Clone)</a
           >
         </li>
