cleaned up resume and projects tabs

--- a/Projects.html
+++ b/Projects.html
@@ -24,28 +24,32 @@
 
   <body>
     <div class="Projects">
-      <h2>Projects Deployed on Netlify or Heroku</h2>
+      <h2>Projects Deployed on Netlify</h2>
       <div class="ProjectList">
+        <!--
         <li>
           <a href="https://exotic-animal-shop.herokuapp.com/" target="_blank"
           >Exotic Animals 'R Us (eCommerce Website)</a
           >
         </li>
+        -->
         <li>
-          <a href="https://sharp-poitras-b94dad.netlify.app/" target="_blank"
+          <a href="https://colin-hoolwerf-strangers-things.netlify.app/" target="_blank"
           >Stranger's Things (Craig's List Clone)</a
           >
         </li>
         <li>
-          <a href="https://mystifying-euclid-1fb75d.netlify.app/" target="_blank"
+          <a href="https://colin-hoolwerf-art-collector.netlify.app/" target="_blank"
           >Art Collector (Harvard Art API)</a
           >
         </li>
+        <!--
         <li>
           <a href="https://rocky-oasis-30036.herokuapp.com/" target="_blank"
           >Wizard News (Hacker News Clone)</a
           >
         </li>
+      -->
         <li>
           <a href="https://colin-hoolwerf-snake.netlify.app/" target="_blank"
           >Classic Snake in Vanilla JavaScript</a
